Fix alignment issue

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -69,7 +69,7 @@ body {
 
 .cli-line{
 	white-space: pre-line;
-	padding: 10px;
+	padding: 10px 0;
 	white-space: pre-wrap;
     word-wrap: break-word;
 }
